resilient/tests/it/snapshots/it__diagnostics_snapshots__typecheck_let_int_assigned_string@typecheck_let_int_assigned_string.snap
---
source: resilient/tests/diagnostics_snapshots.rs
assertion_line: 159
description: "fn main(int _d) {\n    let bad: int = \"hi\";\n    return 0;\n}\n"
expression: output
---
Running type checker...
Type error: <tmp>.rs:2:9: let bad: int — value has type string
<tmp>.rs:2:9: let bad: int — value has type string
Type error: let bad: int — value has type string
       let bad: int = "hi";
           ^
Error: Type check failed: <tmp>.rs:2:9: let bad: int — value has type string
